<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/cardBackgroundColor"
    android:padding="10dp"
    tools:parentTag="ru.krivonosovdenis.fintechapp.customviews.SocNetworkPostWithPhoto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/posterAvatar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        android:src="@drawable/poster_avatar_default"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <TextView
        android:id="@+id/posterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/tools_poster_name"
        android:textColor="?attr/titleTextColor"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/tools_poster_name" />

    <TextView
        android:id="@+id/postDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/tools_post_date"
        android:textColor="?attr/subtitleTextColor"
        android:textSize="14sp"
        tools:text="@string/tools_post_date" />

    <TextView
        android:id="@+id/postText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tools_post_text"
        android:textSize="16sp"
        tools:text="@string/tools_post_text" />

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/post_image_description"
        android:scaleType="fitXY"
        android:src="@drawable/post_image_default" />

    <View
        android:id="@+id/postActionsDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:background="?attr/colorAccent" />

    <ImageButton
        android:id="@+id/postActionLike"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/post_like_button_icon"
        android:contentDescription="@string/like_post_description" />

    <TextView
        android:id="@+id/postLikesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tools_post_text"
        android:textSize="22sp"
        tools:text="@string/tools_post_likes_count" />
</merge>
